public/css/styles.css
/* ... */
#notes-container.fullsize {
    transform: scaleY(1);
    opacity: 1;
}

#notes-container.fullopacity {
    opacity: 1;
}

#task-container {
    height: 45px;
    /* border: 1px solid yellow; */
    display: flex;
    
    flex-direction: row;
    align-items: center;
    justify-content: center;
    position: relative;
}

#prompt-container {
    display: flex;
    z-index: 3;

    position: absolute;
}

#task-input-container {
    /* display: none; */
    /* border: 1px solid yellow; */
    height: 100%;
    width: 85%;
    z-index: 4;
    margin-right: 10px;

    position: absolute;
}

#clearIcon {
    position: absolute;
    width: 25px;
    height: 25px;
    opacity: 1.00;
    top: 0;
    right: 0;
    cursor: pointer;
    margin-right: 10px;
    margin-top: 10px;
    /* border: 2px solid black; */
}

/* #clearIcon {
    transform: rotate(90deg);
} */

#userInputTask {
    font-family: myFont2;
    font-size: 24px;
    color: white;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0);
    border: none;
    outline: none;
    text-align: center;

    /* border: 1px solid red; */
}

#notes-hr {
    margin: 0px;
    margin-bottom: -10px;
    /* display: none; */
}

#notes-console {
    font-family: myFont2;
    color: white;
    margin-top: 10px;
    margin-left: 20px;
    margin-right: 0px;
    height: 198px;
    overflow: auto;
    padding-top: 5px;
    /* border: 1px solid red; */
}

#pencil-icon {
    position: relative;
    width: 30px;
    height: 30px;
    opacity: 1.00;
    margin-left: 10px;
    /* border: 2px solid black; */
}

#clearIcon {
    display: none;
}

#task-prompt {
    font-family: myFont2;
    font-size: 24px;
    color: rgba(255, 255, 255, 0.50);
}

@media (max-width: 535px) {
    #task-prompt {
        font-size: 0;
        /* position: relative; */
    }
    
    #task-prompt::before {
        content: "Enter task";
        font-family: myFont2;
        font-size: 24px;
        color: rgba(255, 255, 255, 0.50);
    }
}

@media (max-width: 235px) {
    #task-prompt {
        font-size: 0;
        /* position: relative; */
    }
    #task-prompt::before {
        content: "";
        font-family: myFont2;
        font-size: 24px;
        color: rgba(255, 255, 255, 0.50);
    }
}

/* main {
    border: 1px solid orange;
} */

.console-line-container {
    display: flex;
    width: 100%;
    /* border: 1px solid yellow; */
}

.console-line-time {
    width: 85px;
    display: flex;
    /* align-items: center; */
    white-space: nowrap;
    border: 2px solid rgba(255, 255, 255, 0);
}

.console-line-arrow {
    display: flex;
    /* align-items: center; */
    justify-content: center;
    width: 25px;
    border: 2px solid rgba(255, 255, 255, 0);
}

.note-input-div {
    /* border: 5px solid rgb(0, 124, 128); */
    /* width: 100%; */
    width: 440px;
    align-items: center;
    display: flex;
    box-sizing: border-box;
}

/* .noteInput {
    width: 99%;
    background-color: rgba(255, 255, 255, 0);
    border: none;
    outline: none;
    font-family: myFont2;
    font-size: 16px;
    color: white;
    margin-bottom: 1px;
} */

.noteInput {
    width: 99%;
    /* height: auto; */
    height: 20px;
    /* height: auto; Change to this eventually */
    min-height: 20px; /* Minimum height before user input */
    background-color: rgba(255, 255, 255, 0);
    border: none;
    outline: none;
    font-family: myFont2;
    font-size: 16px;
    color: white;
    overflow: hidden; /* Prevents scrollbars */
    resize: none; /* Disables manual resizing */
    white-space: pre-wrap; /* Allows text wrapping */
    word-wrap: break-word; /* Breaks long words */
    /* align-items: center; */
    box-sizing: border-box;
    rows: 1;
}



button {
    background-color: rgba(255, 255, 255, 0);
    color: white;
    border: 2px solid white;
    outline: none;
    padding: 8px 15px;
    cursor: pointer;
    border-radius: 15px;
    font-family: myFont3;
    font-size: 24px;
    transition: background-color 0.25s ease;
}

button:active {
    /* background-color: #e6e6e6; */
    background-color: white;
    transform: scale(0.95);
    color: black;
}

button:focus {
    box-shadow: none;
}

button:hover {
    background-color: #ffffff;
    border: 2px solid #ffffff;
    /* border-color: rgb(255, 255, 255); */
    color: black;
    transition: transform 0.10s ease;
    transition: background-color 0.25s ease;
}

#productivity-chill-mode {
    /* border: 1px solid yellow; */
    color: white;
    font-family: myFont3;
    text-align: center;        /* Center the text horizontally */
}

#session-log {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 20px;
}

#session-log p {
    margin-top: 0px;
}

.session-log-container {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: 20px;
}

#progress-bar-container {
    display: flex;
    align-items: center;

    justify-content: center;
    
    /* background-color: rgba(0, 0, 0, 0.35); */
    background-color: rgba(255, 255, 255, 0.25);
    
    /* Centering it horizontally */
    margin-left: auto;
    margin-right: auto;
    
    /* Fixed dimensions */
    width: 100%;
    height: 65px;
    transition: width 1s ease-in-out, height 1s ease-in-out;

    max-width: 600px;
    
    border: 1px rgba(0, 0, 0, 0.25);
    box-sizing: border-box;
    
    border-radius: 40px; /* Created corner curves */
    margin-top: 25px;
    
    /* border: 1px solid rgb(255, 255, 255); */
}

/*  This style causes progress container to "bounce" a little on
    mobile viewports during the transition. This isn't a huge deal
    but something to consider fixing later on... It's caused by
    a discrepancy between the width and min-width values */
#progress-bar-container.small {
    width: 180px;
    min-width: 130px;
    height: 50px;
}
/* ... */

